production.rb set compile=true

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -119,7 +119,7 @@
 }
 
 #searchContainer {
-    background-image: url('weddinghome.jpg');
+    background-image: image-url('weddinghome.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: unset;
