--- a/app/views/page/vendors.html.erb
+++ b/app/views/page/vendors.html.erb
@@ -1,12 +1,11 @@
 
-<h4>
-<%= link_to "Back to home page", root_path %> 
-
-</h4>
-
-<h1> Vendors </h1>
-
 <div class="container">
+	<h4> <%= link_to "Back to home page", root_path %> 
+	</h4>
+
+	<h1> Vendors </h1>
+
+
 	<table class = "table table-striped">
 	  <thead>
 	    <tr>
@@ -32,4 +31,5 @@
 		  <% end %>
 	  </tbody>
 	</table>
+	
 <div>
