added dummy text

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,7 +1,23 @@
 
 <div class="container"> 
-<h1>Page#about</h1>
-<p>Find me in app/views/page/about.html.erb</p>
+<h1>About Us</h1>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla leo tellus, consequat vitae augue non, hendrerit vestibulum mauris. Sed et odio non lacus accumsan consectetur. Duis accumsan enim neque, ut commodo est malesuada eget. Proin aliquam turpis sit amet ornare ornare. Fusce luctus varius sem. Morbi ultricies ornare urna in efficitur. Quisque leo diam, sollicitudin nec malesuada quis, blandit eu orci. Nam maximus ac nisi sit amet mattis. Phasellus tristique velit ut metus mattis, quis fringilla eros tristique.
+</p>
+<p>
+Vestibulum faucibus consectetur ante, nec molestie justo suscipit volutpat. Sed ac odio quis ipsum volutpat efficitur in ac nulla. Suspendisse odio elit, fermentum non fermentum a, fermentum eu turpis. Quisque ut lacinia dolor, et tristique eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras fermentum finibus metus at accumsan. Quisque elementum tincidunt malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tincidunt eros. Integer eget velit ante. Cras posuere, arcu sit amet consequat venenatis, dui dolor eleifend elit, at aliquet tellus neque nec leo. Maecenas vel augue vitae urna placerat aliquam. Phasellus fermentum arcu at arcu sollicitudin, a pulvinar urna faucibus.
+</p>
+<p>
+Nulla sodales pellentesque augue, sit amet maximus leo. Maecenas ac urna eu nulla vehicula dictum nec malesuada erat. Aenean interdum urna nisi, sit amet viverra odio mattis vel. Suspendisse commodo scelerisque leo in iaculis. Ut vel felis pulvinar, auctor libero in, venenatis turpis. Donec dignissim arcu velit, quis cursus tortor suscipit a. Pellentesque eget diam arcu. Aliquam mattis condimentum arcu, quis placerat nisi placerat et. Aenean dapibus arcu sed velit consequat, non suscipit lacus pellentesque. Fusce et arcu eros.
+</p>
+
+<p>
+Curabitur aliquet velit id nibh mollis fermentum. Nullam laoreet lorem a diam venenatis tristique. Maecenas tempor condimentum fermentum. Nullam bibendum quam id quam gravida, id consequat mi suscipit. In efficitur tortor ut purus tempor, placerat varius purus lacinia. Integer lobortis felis sit amet velit lobortis pulvinar. Etiam facilisis, quam ut blandit suscipit, nisi velit tristique nibh, cursus euismod arcu justo in ligula. Fusce semper ullamcorper consectetur. Suspendisse fringilla mauris erat, at ultricies odio consectetur sed. Nam ante turpis, euismod nec velit eget, aliquet sodales arcu. Mauris tristique euismod ante, ac sollicitudin est. Donec porttitor ex vel eros volutpat egestas. Donec non viverra lorem, vel semper sem.
+</p>
+
+<p>
+Morbi scelerisque posuere nisi id fermentum. Morbi lacus elit, consectetur sed convallis vitae, fringilla sit amet lectus. Suspendisse dignissim turpis eu enim feugiat, vitae mollis nunc aliquam. Quisque porta nulla fringilla tempus dapibus. Suspendisse facilisis ex turpis, ut suscipit magna pulvinar et. Fusce vitae commodo libero. Ut tincidunt pharetra purus eget scelerisque. Duis in quam sed mauris tincidunt malesuada non non purus. Aliquam sagittis hendrerit nisl, non congue dolor feugiat eu. Suspendisse accumsan est lorem, at euismod tortor dignissim vel. Curabitur blandit metus eget laoreet volutpat. Vestibulum varius elit sed arcu facilisis, ac pretium massa tristique. Proin commodo lorem nisl, sed tincidunt lacus tincidunt at. Mauris at porttitor magna, vitae laoreet lectus. Nam id cursus massa, at aliquam lectus.
 
 
+</p>
 </div>
