--- a/app/views/page/faqs.html.erb
+++ b/app/views/page/faqs.html.erb
@@ -1,5 +1,7 @@
 <div class="container"> 
-<h1>Page#faqs</h1>
-<p>Find me in app/views/page/faqs.html.erb</p>
+<h1>FAQs</h1>
+<p>Vestibulum faucibus consectetur ante, nec molestie justo suscipit volutpat. Sed ac odio quis ipsum volutpat efficitur in ac nulla. Suspendisse odio elit, fermentum non fermentum a, fermentum eu turpis. Quisque ut lacinia dolor, et tristique eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras fermentum finibus metus at accumsan. Quisque elementum tincidunt malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tincidunt eros. Integer eget velit ante. Cras posuere, arcu sit amet consequat venenatis, dui dolor eleifend elit, at aliquet tellus neque nec leo. Maecenas vel augue vitae urna placerat aliquam. Phasellus fermentum arcu at arcu sollicitudin, a pulvinar urna faucibus.
+
+</p>
 
 </div>
