--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,5 +1,6 @@
 <div class="container"> 
-<h1>Page#contact</h1>
-<p>Find me in app/views/page/contact.html.erb</p>
+<h1>Contact Us</h1>
+<p>Curabitur aliquet velit id nibh mollis fermentum. Nullam laoreet lorem a diam venenatis tristique. Maecenas tempor condimentum fermentum. Nullam bibendum quam id quam gravida, id consequat mi suscipit. In efficitur tortor ut purus tempor, placerat varius purus lacinia. Integer lobortis felis sit amet velit lobortis pulvinar. Etiam facilisis, quam ut blandit suscipit, nisi velit tristique nibh, cursus euismod arcu justo in ligula. Fusce semper ullamcorper consectetur. Suspendisse fringilla mauris erat, at ultricies odio consectetur sed. Nam ante turpis, euismod nec velit eget, aliquet sodales arcu. Mauris tristique euismod ante, ac sollicitudin est. Donec porttitor ex vel eros volutpat egestas. Donec non viverra lorem, vel semper sem.
+</p>
 
 </div>
