added checklist items

--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -103,6 +103,11 @@
           	<%= link_to "Contact Us", page_contact_path %>
             <!--a href="#">Contact Us</a-->
           </li>
+
+          <li class="dropdown">
+            <%= link_to "My Checklist", page_checklist_path %>
+            <!--a href="#">Contact Us</a-->
+          </li>
         </ul>
       </div>
     </nav><!-- End of Menu -->
