installed google webfonts gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -190,6 +190,7 @@
 
 body{
         padding-top: 40px;
+        font-family: Quicksand, Oswald, arial, sans-serif;
     }
 .tanss {
     position:fixed;
