--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%=google_webfonts_init({
+    google: ['Quicksand']
+    })%>
 
   <meta charset="utf-8">
   <title>Happily Ever After PH - Weddings, Wedding Planner, Ideas, Philippines</title>
