--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     google: ['Quicksand']
     })%>
 
+  <!-- test to see this -->
   <meta charset="utf-8">
   <title>Happily Ever After PH - Weddings, Wedding Planner, Ideas, Philippines</title>
   <meta name="description" content="Happily Ever After PH">
