--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import url(http://fonts.googleapis.com/css?family=Quicksand|Oswald);
+@import url(https://fonts.googleapis.com/css?family=Quicksand|Oswald);
 
 .sidebar-nav {
     padding: 9px 0;
