--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Quicksand|Oswald);
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -18,6 +18,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(//fonts.googleapis.com/css?family=Quicksand|Oswald);
 
 
 
