--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url(//fonts.googleapis.com/css?family=Quicksand|Oswald);
+@import url(http://fonts.googleapis.com/css?family=Quicksand|Oswald);
 
 
 
