--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -17,7 +17,7 @@
   			<div class="collapse navbar-collapse" id="navbar-collapse">
   			
         <% if user_signed_in? %>
-          <%= link_to "Log out", destroy_user_session_path , :method => :delete%>
+          <%= link_to "Log Out", destroy_user_session_path , :method => :delete, :class=> "btn btn-primary btn-sm navbar-btn navbar-right"%>
         <% else %>
           <%= link_to "Log in", new_user_session_path, {:class => "btn btn-primary btn-sm navbar-btn navbar-right"} %>
           <!--a href="" class="btn btn-primary navbar-btn navbar-right">Log in</a-->
