--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,9 +18,6 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url(//fonts.googleapis.com/css?family=Quicksand|Oswald);
-
-
 
 .sidebar-nav {
     padding: 9px 0;
@@ -194,7 +191,7 @@
 
 body{
         padding-top: 40px;
-        font-family: Quicksand, Oswald, arial, sans-serif;
+        font-family: Quicksand, arial, sans-serif;
     }
 .tanss {
     position:fixed;
