--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -11,9 +11,9 @@
   				<h2>Let's turn your wedding vision into a reality.<br><small> Search for anything you need.</small></h2>
   			</div>
 
-  			<div class="row" style="text-align: center;">
+  			<div class="row col-md-6 col-md-offset-3" style="text-align: center;">
   				<form action="" class="form-inline" style="border-bottom: none;">
-            <div class="form-group">
+            <div class="form-group ">
               <input type="text" class="form-control" id="searchText" placeholder="Photographers, Videographers, Reception, etc.">
             </div>
             <button type="submit" class="btn btn-default">Find</button>
