test bootstrap searchdiv

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <!--link rel="stylesheet" type="text/css" href="css/custom.css"-->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
-  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale = 1.0" />
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
