--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -14,7 +14,7 @@
   			<div class="row" style="text-align: center;">
   				<form action="" class="form-inline" style="border-bottom: none;">
             <div class="form-group ">
-              <input type="text" class="form-control" id="searchText" placeholder="Photographers, Videographers, Reception, etc.">
+              <input type="text" class="form-control" id="searchText" placeholder="Reception, Photographers, etc.">
             </div>
             <button type="submit" class="btn btn-default">Find</button>
           </form>
