added pagination function

--- a/app/views/page/checklist.html.erb
+++ b/app/views/page/checklist.html.erb
@@ -49,7 +49,7 @@
 				      		<h4><%= checklist.name %></h4>
 				      	</td>
 				      	<td class="col-xs-6 col-md-4">
-				      		<button type="button" class="btn btn-primary">done</button>
+				      		<button type="button" class="btn btn-sm btn-primary statusBtn">done</button>
 				      	</td>
 				      </tr>
 				    <% end %>
