--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -188,11 +188,18 @@
     border-right: none;
 }
 
+.statusBtn { 
+    border-radius: 15% ;
+    width: 40px;
+    padding-left:0;
+    margin: 0 5px;}
+
+
+.sessionBtn {
+    margin: 0 5px;
+}
 
 body{
         padding-top: 40px;
         font-family: Quicksand, arial, sans-serif;
     }
-.tanss {
-    position:fixed;
-}
