--- a/app/views/page/vendors.html.erb
+++ b/app/views/page/vendors.html.erb
@@ -1,6 +1,10 @@
 
 <div class="container">
 
+
+	<br>
+	<%= render partial: "shared/search_form" %>  
+
 	<h1> Vendors </h1>
 
 	<table class = "table table-striped">
