--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -16,14 +16,16 @@
 
 
   				<!--form action="" class="form-inline" style="border-bottom: none;"-->
-
-          <%= search_form_for @q, :html => {:class => "form-search",style:"border: none"}, url: search_vendors_path, method: :post do |f| %>
+          
+          <%= search_form_for @q, :class => "form-inline", url: search_vendors_path, method: :post do |f| %>
             
-            <%= f.search_field :name_cont, :html => {:class => "form-control", :id => "searchText"} %>
-            <%= f.submit "Find", :html => {:class =>"btn btn-default"} %>
+            <%= f.text_field :name_cont, class: "form-control", placeholder: "Photographers, etc." %>
+            <div class = "m-t-1">
+            <%= f.submit "Find", :class =>"btn btn-default" %>
+            </div>
           <% end %>
 
-          <!--/form-->
+
 
 
 
