--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,3 +1,4 @@
+	<div class="container">
 	<%= search_form_for @q, :class => "form-inline", url: search_vendors_path, method: :post do |f| %>
             
             <%= f.submit "Search", :class =>"btn btn-default" %>
@@ -10,3 +11,5 @@
             
             
   <% end %>
+
+  </div>
