--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,21 +8,25 @@
       <h4><%= t('.sign_up', :default => "Sign up") %></h4>
     </div>
 
+
+
     <div class="panel-body">
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
+
+        <%= devise_error_messages! %>
         <div class="form-group">
           <%= f.label :email %>
-          <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          <%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
           <%= f.label :password %><br />
-          <%= f.password_field :password, class: "form-control" %>
+          <%= f.password_field :password, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
           <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: "form-control" %>
+          <%= f.password_field :password_confirmation, class: "form-control", required: true %>
         </div>
 
         <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
