--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,7 +2,7 @@
 	<div id="rating-form">
 		<label> Rating </label>
 	</div>
-	<%= f.input :comment, required: true %>
+	<%= f.input :comment%>
 	<%= f.button :submit %>
 <%end%>
 
