--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -5,6 +5,7 @@
 	<div id="rating-form">
 		<label> Rating </label>
 	</div>
+	<%= f.input :rating %>
 	<%= f.input :comment %>
 	<%= f.button :submit %>
 <% end %>
@@ -16,12 +17,8 @@
 	$('#rating-form').raty({
 		path: '/assets/',
 		scoreName: 'review[rating]'
-
-
-
-	}
-
-
-		);
+		score: <%= @review.rating %>
+		
+	});
 
 </script>
