autogenerate checklist, replaced checklist tables by *todo_items

--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,6 +1,19 @@
 <div class="container"> 
-<h1>Contact Us</h1>
-<p>Curabitur aliquet velit id nibh mollis fermentum. Nullam laoreet lorem a diam venenatis tristique. Maecenas tempor condimentum fermentum. Nullam bibendum quam id quam gravida, id consequat mi suscipit. In efficitur tortor ut purus tempor, placerat varius purus lacinia. Integer lobortis felis sit amet velit lobortis pulvinar. Etiam facilisis, quam ut blandit suscipit, nisi velit tristique nibh, cursus euismod arcu justo in ligula. Fusce semper ullamcorper consectetur. Suspendisse fringilla mauris erat, at ultricies odio consectetur sed. Nam ante turpis, euismod nec velit eget, aliquet sodales arcu. Mauris tristique euismod ante, ac sollicitudin est. Donec porttitor ex vel eros volutpat egestas. Donec non viverra lorem, vel semper sem.
-</p>
+<div align="center">
+  <h3>Contact Us</h3>
+
+  <%= simple_form_for @contact do |f| %>
+    <%= f.input :name, :required => true %>
+    <%= f.input :email, :required => true %>
+    <%= f.input :message, :as => :text, :required => true %>
+    <div class= "hidden">
+      <%= f.input :nickname, :hint => 'Leave this field blank!' %>
+    </div>
+    <div>
+      </br>
+      <%= f.button :submit, 'Send message', :class=> "btn btn-primary hidden" %>
+    </div>
+  <% end %>
+</div>
 
 </div>
