--- a/app/assets/stylesheets/vendors.scss
+++ b/app/assets/stylesheets/vendors.scss
@@ -9,3 +9,15 @@ ul{
     padding:0;
     list-style-type:none;
 }
+
+.avatarClass {
+    max-height : 100%;
+    max-width : 100%;
+}
+
+.avatarDiv {
+	
+	height: 250px;
+	align-items: center;
+
+}
