forums functionality draft

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -204,7 +204,7 @@
 
 body{
         padding-top: 40px;
-        font-family: Quicksand, arial, sans-serif;
+        font-family: Roboto, arial, sans-serif;
     }
 
 
