--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
    <!-- Latest compiled and minified CSS -->
   <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <!--link rel="stylesheet" type="text/css" href="css/custom.css"-->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale = 1.0" />
   <!-- Optional theme -->
