replaced FAQs by Forums

--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -110,7 +110,7 @@
             <a href="#">Promos</a>
           </li>
           <li class="dropdown">
-            <%= link_to "FAQs", page_faqs_path %>
+            <%= link_to "Forums", posts_path %>
             <!--a href="#">FAQs</a-->
           </li>
           <li class="dropdown">
