--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,21 @@
 <div class="container">
 
 POSTS/FORUMS
+<div>
+<%= link_to "Start New Thread", new_post_path %>
+</div>
 
+<div class="container">
+	<% @posts.each do |p| %>
+		<div class="table">
+			<tr> 
+				<%= link_to p.title, post_path(:id => p.id) %> 
+				<p> <%= time_ago_in_words(p.created_at) %> </p>
+				<p> by user: <%= p.user_id %> </p>
 
-<% @posts.each do |p| %>
-	<div class="table">
-		<tr> 
-			<%= link_to p.title, post_path(:id => p.id) %> 
-			<p> <%= time_ago_in_words(p.created_at) %> </p>
-			<p> by user: <%= p.user_id %>
-
-		</tr>
-	</div>
-<% end %>
+			</tr>
+		</div>
+	<% end %>
+</div>
 
 </div>
