--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Log in", "#login-modal" , {:class => "btn btn-primary btn-sm navbar-btn navbar-right sessionBtn", 'data-toggle' => "modal"} %>
           <!--a href="" class="btn btn-primary navbar-btn navbar-right">Log in</a-->
           <span> :: </span>s
-          <%= link_to "Join Now", new_user_registration_path, {:class => "btn btn-warning btn-sm navbar-btn navbar-right sessionBtn", 'data-target' => "#join-modal", 'data-toggle' => "modal"} %>
+          <%= link_to "Join Now", "#join-modal", {:class => "btn btn-warning btn-sm navbar-btn navbar-right sessionBtn", 'data-toggle' => "modal"} %>
           <!--a href="" class="btn btn-warning navbar-btn navbar-right">Join Now</a-->
         <% end %>
         </div>
