--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.top-border {
+    margin-top: 2px;
+    border-top: 1px solid #E8E8E8;
+}
+
+.panel-body.thread-row {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.row.thread-row {
+    overflow: hidden;
+}
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.row.thread-row >[class*="col-"] {
+    margin-bottom: -99999px;
+    padding-bottom: 99999px;
+}
+
+.userblock {
+    border-right: 1px solid #E8E8E8;
+}
