--- a/app/assets/stylesheets/user_todo_items.scss
+++ b/app/assets/stylesheets/user_todo_items.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the user_todo_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.index_row {
+	padding: 2em;
+	/* border-bottom: 1px solid rgba(250,250,250, .3); */
+	border-bottom: 1px solid;
+	.todo_list_sub_title {
+		margin-bottom: 0;
+	}
+}
