added background color, checklist layout

--- a/app/views/user_todo_items/complete.js.erb
+++ b/app/views/user_todo_items/complete.js.erb
@@ -1,3 +1,3 @@
 <% if @user_todo_item.completed? %>
-	$("#<%= dom_id(@user_todo_item) %>").css("font-weight","bold");
+	$("#<%= dom_id(@user_todo_item) %>").slideUp("normal", function() { $(this).remove(); }  );
 <% end %>
