--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -199,7 +199,7 @@
 
 body{
         padding-top: 40px;
-        font-family: Verdana, Quicksand, arial, sans-serif;
+        font-family: Lato, arial, sans-serif;
     }
 
 @import url(http://fonts.googleapis.com/css?family=Roboto);
