--- a/app/assets/stylesheets/user_todo_items.scss
+++ b/app/assets/stylesheets/user_todo_items.scss
@@ -20,8 +20,8 @@
 
 .row {
 		width: 100%;
-		/*font-size: 1.5em; */
-		border-bottom: 1px solid ;
+		/*font-size: 1.5em; 
+		border-bottom: 1px solid ;*/
 		.complete {
 			width: 10%;
 			float: left;
@@ -34,6 +34,11 @@
 }
 
 .completed {
+	
+	text-decoration: line-through;
+}
+
+.completed-todo-item {
 	
 	text-decoration: line-through;
 }
