--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 
+
 	<div class="pull-right">
 		&nbsp;
 		&nbsp;
@@ -8,7 +9,7 @@
 	</div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<div class="panel-title"> <%= comment.user.email %>
+			<div class="panel-title"> <!--%= #comment.user.email %-->
 			</div>
 		</div>
 		<div class="panel-body thread-row">
@@ -41,4 +42,6 @@
 			</div>
 		</div>
 	</div>
+
+
 
