--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,13 +62,24 @@
 			</div>
 		</div>
 
-		<div>
-		<%= render @post.comments %>
+		<div >
+			<div id="comment-list">
+			<% @comments.each do |comment| %>
+				<%= render 'comments/comment',:comment => comment %>
+			<% end %>
+			</div>
+			<div>
+				<%= will_paginate @comments %>
+			</div>
 		</div>
+
+		
 
 		<div>
 			<h4> Reply to Thread </h4>
-			<%= render 'comments/form' %>
+			<div id="comment-form">
+				<%= render  'comments/form'%>
+			</div>
 		</div>
 	</div>	
 	
