--- a/app/views/user_todo_items/complete.js.erb
+++ b/app/views/user_todo_items/complete.js.erb
@@ -1,3 +1,10 @@
 <% if @user_todo_item.completed? %>
-	$("#<%= dom_id(@user_todo_item) %>").slideUp("normal", function() { $(this).remove(); }  );
+	
+	var htmlToDo = "<div class='completed-todo-item' ><i class='fa fa-check'></i> <%= j @user_todo_item.item %> </div>";
+	var testvar = "<i class='fa fa-check'></i> ";
+	$("#<%= dom_id(@user_todo_item) %> .todoContent").replaceWith(htmlToDo);
+
+	$("#<%= dom_id(@user_todo_item) %>").appendTo('#completed-items');
+	
+	
 <% end %>
