--- a/app/views/user_todo_items/index.html.erb
+++ b/app/views/user_todo_items/index.html.erb
@@ -3,8 +3,6 @@
 
 <div class="checklist-container col-xs-12 col-lg-3", style="margin-right: 10px;">
 
-	
-
 	<div class="panel-group">
 		<div class="panel", style="text-align: center;">
 
@@ -13,12 +11,12 @@
 		</div>
 		<br>
 		<ul>
-			<li class="panel panel-heading">
+			<li class="panel panel-heading", id="todo-panel-option">
 				To-Dos
 
 			</li>
 
-			<li class="panel panel-heading">
+			<li class="panel panel-heading", id="completed-todo-panel-option">
 				Completed
 
 			</li>
@@ -30,20 +28,17 @@
 
 <div class=" checklist-container col-xs-12 col-lg-9">
 	
-	
-		<div class="panel-group">
-		
+		<div class="panel-group", id="all-items">
+			<h1> Remaining To-Dos </h1>
 			<ul>
 			<% @user_todo_items.each do |t| %>
-				<li class="panel panel-heading", id=<%= dom_id(t)%> >
-
-						<%= link_to complete_user_todo_item_path(t.id), method: :patch, remote: true do %>
-							<i class="fa fa-check"></i>
-						<% end %>
-
+				<li class="panel panel-heading , remaining-todo-item", id=<%= dom_id(t)%> >
+					<div class="todoContent">
+						<%= link_to '<i class="fa fa-check"></i>'.html_safe, complete_user_todo_item_path(t.id), class: "check-but", method: :patch, remote: true  %>
+							<!--i class="fa fa-check"></i-->
+						
 						<%= t.item %> 
-
-
+					</div>
 				</li>
 				<!--
 				<%if t.completed? %>
@@ -69,6 +64,24 @@
 
 			</ul>
 		</div>
+
+		
+		<!-- compeleted items -->
+		<div class="panel-group", id="completed-items-panel", style="display:none;">
+			<h1> Completed Items </h1>
+			<ul id="completed-items">
+			<% @completed_user_todo_items.each do |t| %>
+				
+				<li class="panel panel-heading, completed-todo-item", id=<%= dom_id(t)%> >
+						<i style = "opacity: 0.4;" class ="fa fa-check"> </i>
+						<%= t.item %> 
+				</li>
+				
+			<% end %>
+
+			</ul>
+		</div>
+
 </div>
 
 </div>
